--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body {
 }
 
 h1 {
-    color: black;
+    color: silver;
     font-size: 2.0em;
     font-weight: bold;
     margin: 0.5em 0 0.5em 0;
